replace RUZEE.shadedborder with curvycorners. Now native rounded-corner css-selectors of firefox/webkit are being used. For IE the javascript jumps in and rounds the corners: + WAY Faster on Firefox and Chrome/Safari due to native corner rounding + Layout on IE is not broken anymore + Dynamic height based rendering problem seem to be history now - Does (yet) not work with Opera (fix may come) but as this is only an optical disadvantage the pros prevail.

--- a/webinterface/src/web-data/tpl/default/style.css
+++ b/webinterface/src/web-data/tpl/default/style.css
@@ -71,6 +71,13 @@
 		background: #000;
 		padding-left: 5px;
 		margin-bottom: 8px;
+				
+		/*border: 1px solid #FFF;*/		
+		/* Do rounding (native in Firefox and Safari) */
+		border-radius: 5px;
+    	-webkit-border-radius: 5px;
+    	-moz-border-radius: 5px;
+    	
 	}
 	
 	#banner a, #banner a:visited, #banner a:active{
@@ -78,8 +85,6 @@
 		text-decoration: none;
 	}
 	
-	#banner, #banner .sb-inner { background:#000 }
-	#banner .sb-border { background: #FFF }
 	#bannerText{
 		margin-bottom: 5px;
 		padding-left: 2px;
@@ -104,8 +109,6 @@
 		float: left;
 	}
 	
-
-	
 	#bannerRight img{
 		padding-top: 5px;
 	}
@@ -121,10 +124,12 @@
 		padding-right: 3px;
 		padding-bottom: 1px;
 		margin-bottom: 8px;
+				
+		/* Do rounding (native in Firefox and Safari) */
+    	-webkit-border-radius: 5px;
+    	-moz-border-radius: 5px;
 	}
 
-	#current, #current .sb-inner { background:#000 }
-	#current .sb-border { background: #FFF }
 	#currentTable{
 		margin-bottom: 10px;
 		padding-left: 2px;
@@ -135,8 +140,6 @@
 	#currentDuration{
 		text-align: right;
 	}
-	
-	
 	
 	#mainMenu{
 		background-color: #485052;
@@ -154,14 +157,17 @@
 		width: 130px;
 		height: 21px;
 		margin-left: 2px;
+		
+		/* Do rounding (native in Firefox and Safari) */
+    	-webkit-border-radius: 5px;
+    	-moz-border-radius: 5px;		
 	}
-	#mainMenu li .sb-border { background:#485052; }
-	#mainMenu li, #mainMenu li .sb-inner { background-color: #485052; }
-
+	
+	#mainMenu li{ 
+		background:#485052; 
+	}
 	#mainMenu a{ display:block; padding: 1px; }
-
-	#mainMenu li:hover, #mainMenu li:hover .sb-inner { background: #AAA; }
-	#mainMenu li.hover, #mainMenu li.hover .sb-inner { background: #AAA; }
+	#mainMenu li:hover, #mainMenu li:hover{ background: #AAA; }
 
 /***************
  Upper Left Nav
@@ -177,22 +183,28 @@
 		height: 250px;
 		background: #000;
 		padding-left: 5px;
+				
+		border: 2px solid #000;
+		/* Do rounding (native in Firefox and Safari) */
+    	-webkit-border-radius: 5px;
+    	-moz-border-radius: 5px;
 	}
 	
 	#nav a{
 		display: block;
 	}
 
-	#nav, #nav .sb-inner { 
+	#nav{ 
 		background:#FFF; 
-		padding-left: 2px;
-		padding-right: 2px;
+		padding-left: 0px;
+		padding-right: 0px;		
+		
 	}
-	#nav .sb-border { background:#000; }
 
-	#navHd, #navHd .sb-inner{
+	#navHd{
 		background: #000;
-		text-align: center;
+		text-align: center;		
+		width: 153px;
 	}
 	
 	#navContent{
@@ -203,40 +215,37 @@
 	#navSearch{
 		width: 100%;
 		height: 61px;
-		background: #000;
-		padding-left: 5px;
+		background: #FFF;
+		margin-top: 8px;
+		border: 2px solid #000;
+		/* Do rounding (native in Firefox and Safari) */
+    	-webkit-border-radius: 5px;
+    	-moz-border-radius: 5px;
 	}
 
-	#navSearch, #navSearch .sb-inner { 
-		background:#FFF; 
-		padding-left: 2px;
-		padding-right: 2px;
-	}
-	#navSearch .sb-border { background:#000; }
-
-	#searchHd, #searchHd .sb-inner{
+	#searchHd{
 		background: #000;
 		text-align: center;
+		width: 153px;
 	}
 	
 	
 	#navVolume{
 		width: 100%;
 		height: 75px;
-		background: #000;
-		padding-left: 0px;
+		background: #FFF;
+		margin-top: 8px;
+		
+		border: 2px solid #000;
+		/* Do rounding (native in Firefox and Safari) */
+    	-webkit-border-radius: 5px;
+    	-moz-border-radius: 5px;
 	}
 
-	#navVolume, #navVolume .sb-inner { 
-		background:#FFF; 
-		padding-left: 2px;
-		padding-right: 2px;
-	}
-	#navVolume .sb-border { background:#000; }
-
-	#volHd, #volHd .sb-inner{
+	#volHd{
 		background: #000;
 		text-align: center;
+		width: 153px;
 	}
 	
 	
@@ -246,20 +255,20 @@
  **************/
 	#content{
 		float: left;
-		background: #000;
+		background: #FFF;
 		width: 833px;
 		min-height: 308px;
 		margin-left: 8px;
+		border: 2px solid #000;
+		
+		/* Do rounding (native in Firefox and Safari) */
+    	-webkit-border-radius: 5px;
+    	-moz-border-radius: 5px;
 	}
-
-	#content, #content .sb-inner { background:#FFF; padding: 2px}
-	#content .sb-border { background:#000; }
-
-	#contentHd, #contentHd .sb-inner{
+	#contentHd{
 		background: #000;
-		color: #fff;
+		width: 827px;
 	}
-
 	#epgSearch{ width: 120px; }
 	
 	.boxContent{
